fix(blog): fix spacing at blog footer

--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -53,6 +53,7 @@
       @extend .button;
       @extend .button-large;
       @extend .button.orange;
+      margin-bottom: 0;
     }
   }
 
